# hypr-fullscreen-status-rs

./: Cargo.toml
src/: args.rs  error.rs  lib.rs  listener.rs  main.rs  prelude.rs  query.rs  status.rs
src/args/: listener.rs  mod.rs  query.rs
