[package]
name = "hypr-fullscreen-listener"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Nogueira"]

[dependencies]
clap = { version = "4", features = ["cargo"] }
# hyprland = { version = "0.3", features = ["listener", "tokio"], default-features = false }
hyprland = { version = "0.4.0-alpha.3", features = ["listener", "tokio"], default-features = false, git = "https://github.com/hyprland-community/hyprland-rs" }
itertools = "0.12"
thiserror = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic  = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
strip = true      # Strip symbols from binary   https://github.com/johnthagen/min-sized-rust
lto = true        # Enable Link Time Optimisation
opt-level = 'z'   # Optimize for size.
codegen-units = 1 # Reduced to increase optimisations
panic = "abort"   # Abort on panic
